# blender-mcp

./: .gitignore  .mcp.json  ADVANCED_TESTS.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDLER_FIXES_SUMMARY.md  LICENSE  NDH6SA~M  README.md  _pathfix.py  pyproject.toml  sitecustomize.py  usability-todo.md
.VSCodeCounter/2026-02-04_01-16-47/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2026-02-04_01-20-50/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-04_01-21-02/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-04_01-21-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2026-02-04_01-23-03/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: blender-matrix.yml  ci.yml  publish.yml  version-tag.yml
.sisyphus/plans/: mcp-stability-test-loop.md
addon/: README.md  contract.md  entrypoint.py  poc_harness.py  socket_server.py  start_socket_server.py  start_socket_server_headful.py
blender_mcp/: __init__.py
blender_mcp/adapters/: __init__.py
blender_mcp/catalog/: catalog.py
blender_mcp/core/: lifecycle.py
blender_mcp/security/: __init__.py  permissions.py
blender_mcp/transport/: base.py  stdio.py
blender_mcp/validation/: __init__.py
blender_mcp/versioning/: support_matrix.py
docs/: context-optimization.md  index.md  optimization-audit.md  quick-start.md  security-configuration.md
docs/architecture/: core-lifecycle.md  handler-property-metadata.md  plugin-boundary.md  protocol-transport.md  transport.md
docs/archive/: README.md
docs/bug/: 2026-02-09-capture-viewport-fails.md  2026-02-09-deep-integration-test.md  2026-02-09-geometry-nodes-auto-create.md  2026-02-09-get-collections-default-name.md  2026-02-09-import-export-formats.md  2026-02-09-manage-physics-context.md  2026-02-09-manage-uv-edit-mode.md  2026-02-09-mcp-deep-check-results.md  2026-02-09-mcp-tools-test-failures.md  2026-02-09-server-threading-crash.md  2026-02-09-unicode-object-names.md
docs/bugs/: data-create-curve-splines-lost.md  data-create-grease-pencil-unsupported.md  data-create-mesh-geometry-failure.md  data-create-metaball-unsupported.md  data-create-text-unsupported.md  test-data-create-camera.md  test-data-create-point-light.md
docs/capabilities/: catalog.md  implementation-status.md  roadmap.md
docs/clients/: amp.md  antigravity.md  claude-code.md  cline.md  codex.md  copilot-cli.md  cursor.md  factory-cli.md  gemini-cli.md  gemini-code-assist.md  jetbrains.md  kiro.md  opencode.md  qoder-cli.md  qoder.md  visual-studio.md  vs-code-copilot.md  warp.md  windsurf.md
docs/migration/: code-root.md  tools-migration.md
docs/reports/: issue-167-node-group-recommendation.md
docs/research/: batch-operations-feasibility.md  blender-api.md  mcp-tool-design-findings.md  mcp.md  reference-projects.md
docs/security/: allowlist.md  audit-logging.md  guardrails.md  permission-scopes.md  rate-limits.md  risk-assessment.md
docs/structure/: code-layout.md  docs-and-openspec.md  top-level-layout.md
docs/testing/: ci-matrix.md  geometry-node-test-plan.md  geometry-node-test-report.md  integration-test-plan.md  modifier-test-plan.md  modifier-test-report.md  real-scenario-test-plan-v1.2.md  shader-node-test-plan.md  shader-node-test-report.md
docs/tools/: coverage-analysis.md  data-tools.md  data-types.md  declarative-write-layer.md  imperative-write-layer.md  info-tool.md  operator-tool.md  overview.md  perception-layer.md  script-tool.md
docs/validation/: evaluation-gate.md
docs/versioning/: compatibility-results.json  support-matrix.json  support-matrix.md
examples/: README.md  _pathfix.py  stdio_loop.py
openspec/: project.md
scripts/: README.md  _pathfix.py  check_compatibility.py  ci_install_blender.py  ci_run_blender_tests.py  reload-addon.sh  reload-mcp.sh  run_real_blender_tests.py  validate_plugin_boundary.py
src/: README.md
src/blender_mcp/: AGENTS.md  __init__.py  mcp_protocol.py  telemetry.py
src/blender_mcp_addon/: __init__.py  operators.py  preferences.py  ui.py
tests/: AGENTS.md  __init__.py  _pathfix.py  blender-paths.example.json  conftest.py  response_schema.py  test_00_pathfix.py  test_adapters.py  test_allowlist.py  test_audit.py  test_capability_catalog.py  test_catalog_schema_sync.py  test_compatibility.py  test_concurrency.py  test_error_codes_and_schema.py  test_guardrails.py  test_guardrails_extended.py  test_handlers.py  test_mcp_protocol.py  test_persistent_connection.py  test_plugin_contract.py  test_progress_pipeline.py  test_prompts_registry.py  test_property_parser.py  test_rate_limit.py  test_response_helpers.py  test_support_matrix.py  test_telemetry.py  test_version_compat.py
tests/addon/: test_animation_editor.py  test_boundary_conditions.py  test_bug_regression.py  test_capabilities_dispatcher.py  test_constraints_handler.py  test_data_dispatcher.py  test_generic_handler.py  test_handlers.py  test_importexport_handler.py  test_info_query.py  test_metadata_system.py  test_node_editor.py  test_node_editor_nested.py  test_node_reader.py  test_operator_executor.py  test_physics_handler.py  test_response.py  test_scene_config.py  test_script_executor.py  test_sequencer_editor.py  test_shared_utilities.py  test_socket_server.py  test_uv_handler.py
tests/catalog_utils/: __init__.py  catalog.py
tests/fake_bpy/: __init__.py  _animation.py  _app.py  _bmesh.py  _constraints.py  _context.py  _data.py  _modifiers.py  _ops.py  _scene.py  _sequencer.py  _types.py  test_fake_bpy.py
(+331 files in other folders)
