[project]
name = "ageless-blender-mcp"
version = "1.1.0"
description = "MCP server integration for AI-assisted Blender automation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Blender MCP Contributors" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
  "Topic :: Software Development :: Libraries",
]
keywords = ["blender", "mcp", "model-context-protocol", "ai", "automation"]
dependencies = []

[project.urls]
Homepage = "https://github.com/ageless-h/blender-mcp"
Repository = "https://github.com/ageless-h/blender-mcp"
Documentation = "https://github.com/ageless-h/blender-mcp/blob/main/docs/quick-start.md"
Issues = "https://github.com/ageless-h/blender-mcp/issues"

[project.scripts]
ageless-blender-mcp = "blender_mcp.mcp_protocol:run_mcp_server"
blender-mcp = "blender_mcp.mcp_protocol:run_mcp_server"

[dependency-groups]
dev = [
  "ruff>=0.7.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blender_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/blender_mcp/**", "README.md", "LICENSE"]

[tool.pyright]
extraPaths = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # TODO: fix line-length violations incrementally

[tool.ruff.lint.per-file-ignores]
"src/blender_mcp/mcp_protocol.py" = ["E402", "I001"]
"src/blender_mcp/prompts/__init__.py" = ["I001"]
"src/blender_mcp/prompts/registry.py" = ["I001"]
"tests/test_error_codes_and_schema.py" = ["E702"]
"src/blender_mcp_addon/handlers/data/core_handlers.py" = ["E741"]
"src/blender_mcp_addon/handlers/nodes/reader.py" = ["E741"]
